fix(index): fix vertical margins on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,7 +122,7 @@ img {
     position: relative;
     top: auto;
     left: auto;
-    margin: 1em;
+    margin: 0 1em;
   }
 
   .written-content {
